# IA_PROJET

./: .gitignore  README.md  main.py  pyproject.toml  rc_filter.cir  streamlit_app.py
main/: inverter_spice.py  optimize_inv.py  pools.py  rc_analysis.py  rl_env.py  rl_train_parallel.py  rl_train_seq.py  spice_pool.py  spice_worker.py
results/tb/inv_ppo_1/: events.out.tfevents.1765537190.Karim.4793.0
scripts/: test_spawn_pool.py  test_worker.py
spice/: inv_char.cir  inv_delay.cir  inv_delay.circd  inv_power.cir  rc_filter.cir
