[project]
name = "ia-projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ciel>=2.4.0",
    "gymnasium>=1.2.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "stable-baselines3[extra]>=2.7.1",
    "streamlit>=1.52.1",
]
